<resources>
    <string name="app_name">yzxLocalStore</string>
    <string name="tv_login">登录</string>
    <string name="tv_name">账号</string>
    <string name="tv_pwd">密码</string>
    <string name="tv_hint_name">请输入账号</string>
    <string name="tv_hint_pwd">请输入登录密码</string>
    <string name="empty_name_pwd">请输入账号或密码</string>
    <string name="error_name_pwd">账号或密码有误，请重新输入！</string>
    <string name="permissions_fail">拒绝权限，可能会导致部分功能无法正常使用，请重新打开权限</string>
    <string name="more">更多</string>
    <string name="cash_register">收银</string>
    <string name="user_login">用户登录</string>
    <string name="business">商家</string>
    <string name="assistant">店员</string>




</resources>
